--- a/src/main/resources/templates/codemail.html
+++ b/src/main/resources/templates/codemail.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>비밀번호 재설정</title>
+  <title>인증번호 발송</title>
   <style>
     body {
       font-family: 'Apple SD Gothic Neo', 'Malgun Gothic', '맑은 고딕', sans-serif;
@@ -51,19 +51,24 @@
       color: #888888;
       margin-top: 30px;
     }
+    .code {
+      font-size: 20px;
+      font-weight: bold;
+      color: #4C5FF7;
+    }
   </style>
 </head>
 <body>
 <div class="container">
   <div class="header">
-    <h1>비밀번호 재설정</h1>
+    <h1>인증번호 발송</h1>
   </div>
   <div class="content">
     <p>안녕하세요.<br>Com2Here 서비스를 이용해 주셔서 감사합니다.</p>
-    <p>아래의 비밀번호로 로그인하여 비밀번호를 변경해주시기 바랍니다.</p>
-    <p><strong>비밀번호: <span th:text="${password}"></span></strong></p>
+    <p>아래의 인증번호를 입력하여 인증을 완료해주시기 바랍니다.</p>
+    <p><strong>인증번호: <span class="code" th:text="${code}"></span></strong></p>
 
-    <p class="notice">이 비밀번호는 즉시 변경해 주시기 바랍니다.<br>본인이 요청하지 않은 경우 이 메일을 무시하셔도 됩니다.</p>
+    <p class="notice">이 인증번호는 30분 동안 유효합니다.<br>본인이 요청하지 않은 경우 이 메일을 무시하셔도 됩니다.</p>
   </div>
   <div class="footer">
     <p>© 2025 Com2Here. All rights reserved.</p>
