--- a/src/main/resources/templates/codemail.html
+++ b/src/main/resources/templates/codemail.html
@@ -64,7 +64,7 @@
     <h1>인증번호 발송</h1>
   </div>
   <div class="content">
-    <p>안녕하세요.<br>Com2Here 서비스를 이용해 주셔서 감사합니다.</p>
+    <p>안녕하세요.<br>컴히얼 서비스를 이용해 주셔서 감사합니다.</p>
     <p>아래의 인증번호를 입력하여 인증을 완료해주시기 바랍니다.</p>
     <p><strong>인증번호: <span class="code" th:text="${code}"></span></strong></p>
 
